Fix title overflow in teaser

--- a/css/teaser.css
+++ b/css/teaser.css
@@ -29,7 +29,8 @@
 }
 
 @media (min-width: 600px) {
-    .teaser-row .card h1 {
+    .teaser-row .card h1 a {
+        display: block;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
